[gd_scene load_steps=15 format=3 uid="uid://dmmo17bbkg2rn"]

[ext_resource type="PackedScene" uid="uid://brrjkso5tn5px" path="res://player.tscn" id="1_1bb7y"]
[ext_resource type="AudioStream" uid="uid://bdc2gmb8foh3g" path="res://sound/ambience/Ambiance_Night_Loop_Stereo.wav" id="2_nwdnr"]
[ext_resource type="Script" path="res://scripts/audio_loop.gd" id="3_xv0a6"]
[ext_resource type="PackedScene" uid="uid://dr3x8e0hfdirv" path="res://env/prefabs/campfire.tscn" id="6_tlxbj"]
[ext_resource type="AudioStream" uid="uid://cb87sgw4iol3v" path="res://sound/environment/Ambiance_Firecamp_Small_Loop_Mono.wav" id="7_v8tkg"]
[ext_resource type="Script" path="res://scripts/damage_area.gd" id="8_vx3bu"]
[ext_resource type="Script" path="res://scripts/player_hud.gd" id="11_2vven"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bgima"]
albedo_color = Color(0.552941, 0.552941, 0.552941, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ipxnk"]
albedo_color = Color(0.188235, 0.572549, 0.733333, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ja7k8"]
albedo_color = Color(0.815686, 0.305882, 0.380392, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7rkms"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_j185m"]
sky_material = SubResource("ProceduralSkyMaterial_7rkms")

[sub_resource type="Environment" id="Environment_x7rq2"]
background_mode = 2
background_color = Color(0.301737, 0.44456, 0.429082, 1)
sky = SubResource("Sky_j185m")
ambient_light_source = 2
tonemap_mode = 2
ssil_enabled = true
ssil_intensity = 1.5
glow_enabled = true
fog_light_color = Color(0.0392157, 0.0117647, 0.0117647, 1)
volumetric_fog_albedo = Color(0.439216, 0.113725, 0.211765, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cvhay"]

[node name="map" type="Node3D"]

[node name="dev_env" type="CSGBox3D" parent="."]
material_override = SubResource("StandardMaterial3D_bgima")
use_collision = true
size = Vector3(32, 0.001, 32)

[node name="wall" type="CSGBox3D" parent="dev_env"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.5, 1.9995, 0)
material_override = SubResource("StandardMaterial3D_bgima")
use_collision = true
size = Vector3(1, 4, 32)

[node name="wall2" type="CSGBox3D" parent="dev_env"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.5, 1.9995, 0)
material_override = SubResource("StandardMaterial3D_bgima")
use_collision = true
size = Vector3(1, 4, 32)

[node name="wall3" type="CSGBox3D" parent="dev_env"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.77527e-07, 1.9995, 15.5)
material_override = SubResource("StandardMaterial3D_bgima")
use_collision = true
size = Vector3(1, 4, 32)

[node name="wall4" type="CSGBox3D" parent="dev_env"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.77527e-07, 1.9995, -15.5)
material_override = SubResource("StandardMaterial3D_bgima")
use_collision = true
size = Vector3(1, 4, 32)

[node name="box" type="CSGBox3D" parent="dev_env"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.6595, 0.5, 8.6595)
material_override = SubResource("StandardMaterial3D_ipxnk")
use_collision = true

[node name="box2" type="CSGBox3D" parent="dev_env"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.6595, 1, 8.6595)
material_override = SubResource("StandardMaterial3D_ja7k8")
use_collision = true
size = Vector3(2, 2, 2)

[node name="box3" type="CSGBox3D" parent="dev_env"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.6595, 0.5, 5.6595)
material_override = SubResource("StandardMaterial3D_ipxnk")
use_collision = true

[node name="box4" type="CSGBox3D" parent="dev_env"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.21695, 1, 5.6595)
material_override = SubResource("StandardMaterial3D_ja7k8")
use_collision = true
size = Vector3(2, 2, 2)

[node name="sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.30603, -0.658721, -0.687337, 0.884098, -0.464458, 0.0514851, -0.353153, -0.591917, 0.724512, 0, 4, 0)
shadow_enabled = true

[node name="env" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_x7rq2")

[node name="player" parent="." instance=ExtResource("1_1bb7y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.08)

[node name="amb_night" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_nwdnr")
autoplay = true
panning_strength = 0.0
bus = &"Reverb"
script = ExtResource("3_xv0a6")

[node name="campfire" parent="." instance=ExtResource("6_tlxbj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.042583, 0)

[node name="light" type="OmniLight3D" parent="campfire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.543417, 0)
light_color = Color(0.780392, 0.388235, 0.266667, 1)
light_energy = 2.85
omni_range = 3.0
omni_attenuation = 1.30625

[node name="sfx" type="AudioStreamPlayer3D" parent="campfire"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.042583, 0)
stream = ExtResource("7_v8tkg")
volume_db = -6.0
autoplay = true
bus = &"Reverb"
script = ExtResource("3_xv0a6")

[node name="damage_area" type="Area3D" parent="campfire"]
script = ExtResource("8_vx3bu")

[node name="col" type="CollisionShape3D" parent="campfire/damage_area"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.8, 0)
shape = SubResource("CylinderShape3D_cvhay")

[node name="ui" type="CanvasLayer" parent="."]

[node name="hud" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("11_2vven")

[node name="status" type="Control" parent="ui/hud"]
layout_mode = 1
anchors_preset = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 133.0
offset_bottom = 64.0
mouse_filter = 1

[node name="meters" type="Label" parent="ui/hud/status"]
layout_mode = 0
offset_right = 178.0
offset_bottom = 148.0
scale = Vector2(0.5, 0.5)
text = "water: 1.0
energy: 1.0
nutrition: 1.0
morale: 1.0
stamina: 1.0"

[node name="timestamp" type="Label" parent="ui/hud/status"]
layout_mode = 0
offset_top = 68.0
offset_right = 178.0
offset_bottom = 98.0
scale = Vector2(0.5, 0.5)
text = "Day 01, 00:00"

[node name="conditions" type="Label" parent="ui/hud/status"]
layout_mode = 0
offset_top = 83.0
offset_right = 178.0
offset_bottom = 113.0
scale = Vector2(0.5, 0.5)
text = "temp_sea: 0
temp_alt: 0

weather: clear

wind_speed: 0
wind_dir: 0"

[node name="body" type="Control" parent="ui/hud"]
anchors_preset = 0
offset_left = 2.0
offset_top = 224.0
offset_right = 119.0
offset_bottom = 361.0

[node name="hp_head" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 45.0
offset_top = 6.0
offset_right = 93.0
offset_bottom = 38.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_torso_upper" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 45.0
offset_top = 36.0
offset_right = 93.0
offset_bottom = 68.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_torso_lower" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 45.0
offset_top = 56.0
offset_right = 93.0
offset_bottom = 88.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_head" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 45.0
offset_top = 19.0
offset_right = 93.0
offset_bottom = 51.0
scale = Vector2(0.5, 0.5)
text = "15C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_torso" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 45.0
offset_top = 46.0
offset_right = 93.0
offset_bottom = 78.0
scale = Vector2(0.5, 0.5)
text = "15C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_r_arm_upper" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 9.0
offset_top = 36.0
offset_right = 57.0
offset_bottom = 68.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_r_arm_lower" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 9.0
offset_top = 56.0
offset_right = 57.0
offset_bottom = 88.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_r_arm" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 9.0
offset_top = 46.0
offset_right = 57.0
offset_bottom = 78.0
scale = Vector2(0.5, 0.5)
text = "15C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_r_hand" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 9.0
offset_top = 72.0
offset_right = 57.0
offset_bottom = 104.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_r_hand" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 9.0
offset_top = 82.0
offset_right = 57.0
offset_bottom = 114.0
scale = Vector2(0.5, 0.5)
text = "15C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_l_arm_upper" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 78.0
offset_top = 36.0
offset_right = 126.0
offset_bottom = 68.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_l_arm_lower" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 78.0
offset_top = 56.0
offset_right = 126.0
offset_bottom = 88.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_l_arm" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 78.0
offset_top = 46.0
offset_right = 126.0
offset_bottom = 78.0
scale = Vector2(0.5, 0.5)
text = "15C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_l_hand" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 78.0
offset_top = 72.0
offset_right = 126.0
offset_bottom = 104.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_l_hand" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 78.0
offset_top = 82.0
offset_right = 126.0
offset_bottom = 114.0
scale = Vector2(0.5, 0.5)
text = "15C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_r_leg_upper" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 32.0
offset_top = 70.0
offset_right = 80.0
offset_bottom = 102.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_r_leg_lower" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 32.0
offset_top = 90.0
offset_right = 80.0
offset_bottom = 122.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_r_leg" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 32.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 112.0
scale = Vector2(0.5, 0.5)
text = "15C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_r_foot" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 32.0
offset_top = 106.0
offset_right = 80.0
offset_bottom = 138.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_r_foot" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 32.0
offset_top = 116.0
offset_right = 80.0
offset_bottom = 148.0
scale = Vector2(0.5, 0.5)
text = "15C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_l_leg_upper" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 56.0
offset_top = 70.0
offset_right = 104.0
offset_bottom = 102.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_l_leg_lower" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 56.0
offset_top = 90.0
offset_right = 104.0
offset_bottom = 122.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_l_leg" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 56.0
offset_top = 80.0
offset_right = 104.0
offset_bottom = 112.0
scale = Vector2(0.5, 0.5)
text = "15C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_l_foot" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 56.0
offset_top = 106.0
offset_right = 104.0
offset_bottom = 138.0
scale = Vector2(0.5, 0.5)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="temp_l_foot" type="Label" parent="ui/hud/body"]
layout_mode = 0
offset_left = 56.0
offset_top = 116.0
offset_right = 104.0
offset_bottom = 148.0
scale = Vector2(0.5, 0.5)
text = "15C"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="finished" from="amb_night" to="amb_night" method="_on_finished"]
[connection signal="finished" from="campfire/sfx" to="campfire/sfx" method="_on_finished"]
[connection signal="body_entered" from="campfire/damage_area" to="campfire/damage_area" method="_on_body_entered"]
